--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Debug/buttons.d
 Debug/BikeBlindSpot_linkInfo.xml
 Debug/BikeBlindSpot.out
 Debug/BikeBlindSpot.bin
+Debug/LEDMatrix.d
+Debug/LEDMatrix.obj
