Ultrasonic and Power Management plus...
- Added ultrasonic as it's own file, not main
- Added some power management stuff (not fully working or tested)
- Renamed blindspot.h to main.h
- Signal system bugfixes, should be fully working now

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ Debug/BikeBlindSpot.out
 Debug/BikeBlindSpot.bin
 Debug/LEDMatrix.d
 Debug/LEDMatrix.obj
+Debug/powerManagment.d
+Debug/powerManagment.obj
+Debug/ultrasonic_sensor.d
+Debug/ultrasonic_sensor.obj
